--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="circle">4</div>
     </div>
 
-    <button class="btn" id="prev">Prev</button>
+    <button disabled class="btn" id="prev">Prev</button>
     <button class="btn" id="next">Next</button>
   </div>
 
